--- a/Arduino_BHY2/.github/workflows/compile-examples.yml
+++ b/Arduino_BHY2/.github/workflows/compile-examples.yml
@@ -3,67 +3,30 @@ name: Compile Examples
 # See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
   push:
-    paths:
-      - ".github/workflows/compile-examples.yml"
-      - "examples/**"
-      - "src/**"
   pull_request:
-    paths:
-      - ".github/workflows/compile-examples.yml"
-      - "examples/**"
-      - "src/**"
   schedule:
     # Run every Tuesday at 8 AM UTC to catch breakage caused by changes to external resources (libraries, platforms).
     - cron: "0 8 * * TUE"
   workflow_dispatch:
   repository_dispatch:
 
+
 jobs:
-  build:
-    name: ${{ matrix.board.fqbn }}
+  compile-sketch:
     runs-on: ubuntu-latest
 
-    env:
-      SKETCHES_REPORTS_PATH: sketches-reports
-
-    strategy:
-      fail-fast: false
-
-      matrix:
-        board:
-          - fqbn: arduino:mbed_nicla:nicla_sense
-            platforms: |
-              - name: arduino:mbed_nicla
-            libraries: |
-              - name: PacketSerial            
-
-        
-
     steps:
+      # This step makes the contents of the repository available to the workflow
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Compile examples
-        uses: arduino/compile-sketches@v2
+      # For more information: https://github.com/arduino/compile-sketches#readme
+      - name: Compile sketch
+        uses: arduino/compile-sketches@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          fqbn: ${{ matrix.board.fqbn }}
-          platforms: ${{ matrix.board.platforms }}
-          libraries: |
-            # Board-specific libraries
-            ${{ matrix.bhy2-libraries }}
-            ${{ matrix.bhy2host-libraries }}
-            ${{ matrix.board.libraries }}
-            ${{ matrix.arduinoiotcloud-libraries }}
-            ${{ matrix.blebridge-libraries }}
+          fqbn: "arduino:mbed_nicla:nicla_sense"
           sketch-paths: |
-            - examples/**
-          enable-deltas-report: true
-          sketches-report-path: ${{ env.SKETCHES_REPORTS_PATH }}
-
-      - name: Save sketches report as workflow artifact
-        uses: actions/upload-artifact@v2
-        with:
-          if-no-files-found: error
-          path: ${{ env.SKETCHES_REPORTS_PATH }}
-          name: ${{ env.SKETCHES_REPORTS_PATH }}
+            - ./
+          libraries: |
+            - name: ArduinoBLE
+            - name: ArduinoIoTCloud
